outputs/csi500-test/tReevo/2025-07-30_16-26-51/problem_iter3_response4.txt_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi500/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/csi500/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/csi500/tmp/gpt_temp_4_add0d9fd.py", line 15
    df['tr'] = df[['high'-'low', 'high'-'close'].shift(1), 'low'-'close'.shift(1)]).max(axis=1)
                                                                                  ^
SyntaxError: unmatched ')'
